# research-toolkit

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: AI_TRAINING_GUIDE.md  FUTURE_ROADMAP.md  LIBRARY_GUIDE.md  MCP_INTEGRATION_GUIDE.md  research_summary.md  synthetic_data_discussion.md
examples/: 00_synthetic_example_what_not_to_do.py  01_correlational_study.py  02_comparative_study.py  03_time_series_analysis.py  04_observational_study.py  05_meta_analysis.py  06_simulation_study.py  07_methodological_study.py  08_theoretical_model.py
examples/output/: 02_comparative_raw_data.csv  02_comparative_raw_data_metadata.json  03_time_series_raw_data.csv  03_time_series_raw_data_metadata.json  04_observational_raw_data.csv  04_observational_raw_data_metadata.json  05_meta_analysis_studies.csv  05_meta_analysis_studies_metadata.json  07_methodological_power_results.csv  07_methodological_power_results_metadata.json  raw_research_data.csv  raw_research_data_metadata.json
guidelines/: AI_RESEARCH_GUIDELINES.md  QUICK_REFERENCE.md  RESEARCH_TYPES_INDEX.md  RESEARCH_TYPES_PART1_EMPIRICAL.md  RESEARCH_TYPES_PART2_NON_EMPIRICAL.md
src/research_toolkit/: __init__.py
src/research_toolkit/core/: __init__.py  formatting.py  output.py  statistics.py
src/research_toolkit/references/: __init__.py  apa7.py
src/research_toolkit/research/: __init__.py  mcp_server.py
templates/: research_template.py
